examples/test/testpolicy12983.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12983
  namespace: namespace291
spec:
  podSelector:
    matchLabels:
      key19: value28
      key27: value39
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key30: value32
      podSelector:
        matchLabels:
          key42: value10
          key17: value18
